// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SinglePlaceMap /> render() should render 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(GridContainer)
      card={true}
      dense={true}
      direction="column"
      spacing={0}
    >
      <WithStyles(GridItem)>
        <WithStyles(Connect(WithSimplifyResaga(DirectionsMap)))
          geocode={Object {}}
        />
      </WithStyles(GridItem)>
      <WithStyles(GridItem)>
        <WithStyles(GridContainer)
          direction="column"
          padding={true}
          spacing={0}
        >
          <WithStyles(GridItem)>
            <WithStyles(JTextClass)
              black={true}
              nowrap={false}
            >
              locationName
            </WithStyles(JTextClass)>
          </WithStyles(GridItem)>
        </WithStyles(GridContainer)>
      </WithStyles(GridItem)>
    </WithStyles(GridContainer)>
  </WithStyles(GridItem)>
</div>
`;

exports[`<SinglePlaceMap /> render() should render mapOnly 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(Connect(WithSimplifyResaga(DirectionsMap)))
      geocode={Object {}}
      mapOnly={true}
    />
  </WithStyles(GridItem)>
</div>
`;
